<resources>
    <string name="app_name">CC Review</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="_32_accounts_found">32 accounts found</string>
    <string name="distance">Distance</string>
    <string name="_1_4km_13km">1.4km - 13km</string>
    <string name="rate">Rate</string>
    <string name="show_only_favourite">Show only favourite</string>
    <string name="categories">Categories</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="grill">Grill</string>
    <string name="bar">Bar</string>
    <string name="cafe">Cafe</string>
    <string name="local">Local</string>
    <string name="_23">(23)</string>
    <string name="sort_by">Sort by</string>
    <string name="popularity">Popularity</string>
    <string name="nearby">Nearby</string>
    <string name="rating">Rating</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="darlene_robertson">Darlene Robertson</string>
    <string name="_4_8">4.8</string>
    <string name="_2248">2248</string>
    <string name="_5">5</string>
    <string name="please_rate_the_visit_and_leave_your_feedback">Please, rate the visit and leave your feedback</string>
    <string name="leave_your_feedback">Leave your feedback</string>
    <string name="upload_file">Upload file</string>
    <string name="tag_a_review_with_a_location">Tag a review with a location</string>
    <string name="add_review">Add Review</string>
    <string name="search">Search</string>
    <string name="local_cuisine">Local Cuisine</string>
    <string name="moderately_priced">Moderately Priced</string>
    <string name="vegan">Vegan</string>
    <string name="show_all">Show All</string>
    <string name="_20356_pacific_coast_hwy_malibu_ca_90265_5428">20356 Pacific Coast Hwy, Malibu, CA 90265–5428</string>
    <string name="_4_5">4.5</string>
    <string name="_123_reviews">123 reviews</string>
    <string name="martin_berasategui">Martin Berasategui</string>
    <string name="calle_de_loidi_4_lasart">Calle de Loidi, 4, Lasart…</string>
    <string name="_54_min_ago">54 min ago</string>
    <string name="great_little_gem_right_on_the_water">Great little Gem right on the water.</string>
    <string name="by_jerome_bell">by Jerome Bell</string>
    <string name="overall_a_very_good_dining_experience_friendly_staff_good_food_and_great_views_i_would_eat_here_again">Overall a very good dining experience - friendly staff, good food, and great views. I would eat here again.</string>
    <string name="filter">Filter</string>
    <string name="_12_02_21_23_45">12.02.21 23:45</string>
    <string name="thanks_bro">Thanks bro</string>
    <string name="_234">234</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_headline_here">Enter headline here</string>
    <string name="edit_review">Edit review</string>
    <string name="edit_your_feedback">Edit your feedback</string>
    <string name="logout">Logout</string>
    <string name="city_name">City name</string>
</resources>