<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ScrollView
        android:scrollbars="none"
        android:layout_above="@id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/green"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/btnBack"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/_32_accounts_found"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/_1_4km_13km"
                        android:textColor="@color/green"
                        android:textStyle="bold" />
                </RelativeLayout>

                <com.google.android.material.slider.RangeSlider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:values="@array/initial_slider_values" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        app:mrb_progressBackgroundTint="@color/grey_light"
                        android:clickable="true"
                        android:id="@+id/materialRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="40dp"
                        android:rating="4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:focusable="true" />

                    <com.suke.widget.SwitchButton
                        android:id="@+id/switch_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:sb_checked="true"
                        app:sb_checked_color="@color/green"
                        app:sb_checkline_color="@color/green"
                        app:sb_checkline_width="0dp"
                        app:sb_enable_effect="true" />


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/show_only_favourite"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.suke.widget.SwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:sb_checked="false"
                        app:sb_checked_color="@color/green"
                        app:sb_checkline_color="@color/green"
                        app:sb_checkline_width="0dp"
                        app:sb_enable_effect="true" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/debit"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/check_box_height"
                        android:button="@drawable/custom_check_box_selector"
                        android:padding="10dp"
                        android:text="@string/vegan"
                        app:buttonTint="@null"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/check_box_height"
                        android:button="@drawable/custom_check_box_selector"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/healthy_food"
                        app:buttonTint="@null"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/check_box_height"
                        android:button="@drawable/custom_check_box_selector"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/grill"
                        app:buttonTint="@null"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/check_box_height"
                        android:button="@drawable/custom_check_box_selector"
                        android:padding="10dp"
                        android:text="@string/bar"
                        app:buttonTint="@null"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/check_box_height"
                        android:button="@drawable/custom_check_box_selector"
                        android:padding="10dp"
                        android:text="@string/cafe"
                        app:buttonTint="@null"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/check_box_height"
                        android:button="@drawable/custom_check_box_selector"
                        android:padding="10dp"
                        android:text="@string/local"
                        app:buttonTint="@null"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_23" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sort_by"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nearby" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating" />

                </RadioGroup>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_marginHorizontal="@dimen/margin_16"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="@dimen/edit_text_radius"
            app:strokeColor="@color/green"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:iconGravity="textStart"
            app:icon="@drawable/cross"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/margin_16"
            android:text="@string/clear_filters"
            android:layout_weight="1" />

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:textAllCaps="false"
            app:iconGravity="textStart"
            app:icon="@drawable/ticksvg"
            android:text="@string/filter"
            android:paddingVertical="@dimen/margin_16"
            app:cornerRadius="@dimen/edit_text_radius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

</RelativeLayout>