<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    tools:context=".fragments.EditReviewFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/green" />

            <ImageButton
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/__more_2_line"
                app:tint="@color/green" />

        </RelativeLayout>

    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_your_feedback"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/materialRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="40dp"
            android:rating="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mrb_progressBackgroundTint="@color/grey_light" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:hint="@string/enter_headline_here"
            app:boxCornerRadiusBottomEnd="@dimen/edit_text_radius"
            app:boxCornerRadiusBottomStart="@dimen/edit_text_radius"
            app:boxCornerRadiusTopEnd="@dimen/edit_text_radius"
            app:boxCornerRadiusTopStart="@dimen/edit_text_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:paddingTop="16sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:hint="@string/leave_your_feedback"
            android:minHeight="100dp"
            app:boxCornerRadiusBottomEnd="@dimen/edit_text_radius"
            app:boxCornerRadiusBottomStart="@dimen/edit_text_radius"
            app:boxCornerRadiusTopEnd="@dimen/edit_text_radius"
            app:boxCornerRadiusTopStart="@dimen/edit_text_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFeedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:minHeight="100dp"
                android:paddingTop="16sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16"
            android:drawableStart="@drawable/ic_baseline_add_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/green"
            android:gravity="center_vertical"
            android:text="@string/upload_file"
            android:textColor="@color/black" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="@dimen/check_box_height"
            android:layout_marginTop="8dp"
            android:button="@drawable/custom_check_box_selector"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/tag_a_review_with_a_location"
            app:buttonTint="@null"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="@dimen/margin_16"
            android:text="@string/edit_review"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/edit_text_radius"
            app:icon="@drawable/ic_baseline_check_24"
            app:iconGravity="textStart" />

    </LinearLayout>


</LinearLayout>